replace immutable dtos with Java14 "records"